--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -118,6 +118,20 @@ header {
     color: #757575;
 }
 
+#event-create-container {
+    padding: 30px;
+}
+
+#event-create-container label {
+    font-weight: bold;
+}
+
+#event-create-container input,
+#event-create-container select,
+#event-create-container textarea {
+    font-size: 12px;
+}
+
 footer {
     text-align: center;
     background-color: #353E48;
