--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -178,6 +178,15 @@ header {
     margin: 20px 0;
 }
 
+#items-list {
+    list-style: none;
+    padding-left: 0;
+}
+
+#items-list li {
+    display: flex;
+}
+
 footer {
     text-align: center;
     background-color: #353E48;
