conectando o nome do usuário no evento que ele criou pela view

--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -187,6 +187,10 @@ header {
     display: flex;
 }
 
+#description-container {
+    margin-top: 30px;
+}
+
 footer {
     text-align: center;
     background-color: #353E48;
