--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -191,6 +191,15 @@ header {
     margin-top: 30px;
 }
 
+.dashboard-title-container {
+    margin-bottom: 30px;
+    margin-top: 30px;
+}
+
+.dashboard-events-container th {
+    width: 25%;
+}
+
 footer {
     text-align: center;
     background-color: #353E48;
