--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -200,6 +200,10 @@ header {
     width: 25%;
 }
 
+.dashboard-events-container form {
+    display: inline-block;
+}
+
 footer {
     text-align: center;
     background-color: #353E48;
