configurou o botão editar do meus projetos

--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -204,6 +204,11 @@ header {
     display: inline-block;
 }
 
+.img-preview {
+    width: 100px;
+    margin-top: 20px;
+}
+
 footer {
     text-align: center;
     background-color: #353E48;
