Corrigindo BUGS que poderiam ocorrer no sistema

--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -41,6 +41,15 @@ header {
     padding: 10px;
 }
 
+#info-container .already-joined-msg {
+    margin: 15px 0;
+    color: #004085;
+    background-color: #CCE5FF;
+    border: 1px solid #BBDAFF;
+    padding: 10px;
+    width: 275px;
+}
+
 #navbar img {
     width: 40px;
 }
